# GaussFit

./: .gitignore  CITATION  CITATION.cff  GaussFit.py  GaussFit3.py  Output.py  README.md  Rick-9000.py  Stats.py  pylintrc  pyproject.toml  requirements.txt
SLM/: extract.py  fit.py  util.py
clustering/: egain_clustering.py  jvclustering.py
gaussfit/: Args.py  Output.py  Parseopts.py  Parser.py  StatArgs.py  __init__.py  args.py  bw.py  colors.py  gaussfit.py  logger.py  logs.py  nocolors.py  parse.py  stats.py
gaussfit/output/: __init__.py  plotter.py  stats.py  writer.py
gaussfit/parse/: __init__.py  parse.py  readfiles.py  util.py
gui/: advanced_prefs.py  colors.py  filebrowser  filebrowser.py  prefs.py  statsfilebrowser.py  tooltip.py
gui/libparse/: GUIParse.py  GUIPlot.py  ParseThread.py  __init__.py
seebeck/: parse.py  stats.py  util.py  writer.py
stats/: README.md  Stats.py
templates/: GMatrix.gpin  JVhistplot.gpin  JVplot.gpin  LogJMatrix.gpin  NDCMatrix.gpin  NDCplot.gpin  Rplot.gpin  VTplot.gpin  Vtransplot.gpin  config.template  plotJV.py  plotJVstacked.py  statplot.gpin
tests/egain_data/: 200709_DyPc_AuTS_2V_1MeOH_S01J01  200709_DyPc_AuTS_2V_1MeOH_S01J02  200709_DyPc_AuTS_2V_1MeOH_S01J02_data.txt  200709_DyPc_AuTS_2V_1MeOH_S01J04_data.txt  200709_DyPc_AuTS_2V_1MeOH_S01J06  200709_DyPc_AuTS_2V_1MeOH_S01J06_data.txt  200709_DyPc_AuTS_2V_1MeOH_S01J07  200709_DyPc_AuTS_2V_1MeOH_S01J10  200709_DyPc_AuTS_2V_1MeOH_S01J10_data.txt  200709_DyPc_AuTS_2V_1MeOH_S01J11_data.txt  200709_DyPc_AuTS_2V_1MeOH_S01J12_data.txt  200709_DyPc_AuTS_2V_2MeOH_S01J01  (+36 more)
(+122 files in other folders)
