[build-system]
requires = ["poetry-core>=1.0.0"]  # Or "hatchling" for Hatch
build-backend = "poetry.core.masonry.api" # Or "hatchling.build" for Hatch

[tool.poetry] # For Poetry; use [tool.hatch] for Hatch
name = "GaussFit"
version = "1.0.0"
description = "Parse EGaIn and CP-AFM tunneling junction data."
authors = ["Ryan Chiechi <ryan@rcclab.com>"]
license = "MIT" # Choose a license
readme = "README.md" # or "README.rst"
packages = [{include = "gaussfit"}] # Important: Specify your package directory

[tool.poetry.dependencies]
python = "^3.12" # Specify Python versions
appdirs = "^1.4.4"
colorama = "^0.4.6"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
scikit-learn = "^1.3.0"
SciPy  = "^1.10.1"
umap-learn = "^0.5.7"
[tool.poetry.dev-dependencies] # Development dependencies
pytest = "^7.0"

[tool.poetry.scripts] # Optional: For command-line scripts
gaussfit = "gaussfit:main_cli"
gaussfit-gui = "gaussfit:main_gui"

# For Hatch, equivalents exist under [tool.hatch]